--- a/static/css/imageupload.css
+++ b/static/css/imageupload.css
@@ -1,4 +1,3 @@
---- imageupload.css ---
 body {
   margin: 0;
   padding: 0;
@@ -6,7 +5,6 @@ body {
   background-color: #1e1e1e;
   color: #ffffff;
   overflow-x: hidden;
-
 }
 
 .image-upload-container {
@@ -56,6 +54,7 @@ body {
 
 .upload-area h2 {
   margin-bottom: 20px;
+  color: #ccc;
 }
 
 .upload-box {
