--- a/static/css/aadhaar.css
+++ b/static/css/aadhaar.css
@@ -102,16 +102,18 @@ input[type="file"] {
     padding: 20px;
   }
 
-  .stepbar {
-    flex-direction: row;
-    position: fixed;
-    bottom: 10px;
-    right: 50%;
-    transform: translateX(50%);
-    border-radius: 12px;
-    padding: 8px;
-    gap: 10px;
-  }
+.stepbar {
+  flex-direction: row;
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #282828;
+  padding: 10px 16px;
+  border-radius: 12px;
+  z-index: 1000;
+}
+
 
   .stepbar div {
     width: 26px;
