--- a/templates/symptoms.html
+++ b/templates/symptoms.html
@@ -32,6 +32,14 @@
         <span id="recordStatus">Click to start recording</span>
         </div>
 
+        <label for="language">Language:</label>
+        <select id="languageSelect">
+            <option value="en-IN" selected>English</option>
+            <option value="hi-IN">Hindi</option>
+            <option value="or-IN">Odia</option>
+        </select>
+
+
         <textarea
         id="symptoms"
         name="symptoms"
