--- a/templates/report.html
+++ b/templates/report.html
@@ -60,6 +60,10 @@
   <!-- PDF Download Button -->
   <button id="download-pdf" class="pdf-icon-btn" title="Download PDF">📥</button>
 
+  <form action="/consultchoice" method="GET" style="text-align: center; margin-top: 40px;">
+  <button type="submit" class="btn-glow">Continue</button>
+  </form>
+
   <!-- Scripts -->
   <script src="/static/js/report.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
