--- a/templates/consult.html
+++ b/templates/consult.html
@@ -21,7 +21,11 @@
     <div class="upload-area feature-box">
       <h2>Finding Hospitals Near You</h2>
       <p id="status">Waiting for location permission...</p>
-      <ul id="hospital-list"></ul>
+      
+      <!-- Hospital Grid Container -->
+      <div id="hospitalList"></div>
+
+      <!-- Optional Skip Button -->
       <button onclick="window.location.href='/thankyou'" class="btn-glow">Skip</button>
     </div>
   </div>
